# BookttBot

./: Dockerfile  README.md  pyproject.toml
booktt/: booktt.py  config.py
tests/: test_booktt.py
